# rayt

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .replit  Cargo.toml  GEMINI.md  LICENSE.md  README.md  app.py  config.toml  performance_comparison.ipynb  pyproject.toml  replit.md  requirements.txt
rayt-cpp/: CMakeLists.txt  aabb.hpp  aarect.hpp  box.hpp  bvh.hpp  camera.hpp  color.hpp  constant_medium.hpp  hittable.hpp  hittable_list.hpp  main.cpp  material.hpp  moving_sphere.hpp  next_week.cpp  one_weekend.cpp  perlin.hpp  ray.hpp  sphere.hpp  texture.hpp  utils.hpp  utils_stb.hpp  vec3.hpp
rayt-cpp/include/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  ray.hpp  sphere.hpp  utils.hpp  vec3.hpp
rayt-cpp/src/: main.cpp
rayt-mojo/: one_weekend.mojo
rayt-python/: Cargo.toml  build.py  pyproject.toml  rayt_python.pyi  rayt_rust_py.pyi  requirements-dev.txt  requirements.txt  setup.py
rayt-python.old/rayt_cython/: vec3.pyx
rayt-python.old/rayt_python/: camera.py  color.py  hittable.py  main.py  material.py  sphere.py  vec3.py
rayt-python/rayt/: cli.py
rayt-python/rayt_c/: ray_color.c
rayt-python/rayt_cython/: vec3.pyx
rayt-python/rayt_python/: Cargo.toml  __init__.py  camera.py  color.py  hittable.py  hittable_list.py  main.py  material.py  pyproject.toml  ray.py  sphere.py  utils.py  vec3.py  vec3_old.py
rayt-python/rayt_python/src/: lib.rs  ray.rs
rayt-python/src/: camera.rs  color.rs  hittable_list.rs  lib.rs  material.rs  ray.rs  sphere.rs  utils.rs  vec3.rs
rayt-python/tests/: test_rayt_python.py  test_vec3.py
rayt-rust/: Cargo.toml
rayt-rust/src/: camera.rs  color.rs  hittable.rs  hittable_list.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs  utils.rs  vec3.rs
rayt-rust/tests/: test_vec3.rs
src/: camera.rs  color.rs  hittable_list.rs  lib.rs  material.rs  sphere.rs  utils.rs  vec3.rs
src/rayt/: __init__.py  camera.py  cli.py  color.py  cuda_optimized.py  cuda_renderer.py  cupy_renderer.py  gpu_utils.py  hittable.py  hittable_list.py  material.py  numba_optimized.py  numba_renderer.py  pytorch_optimized.py  pytorch_renderer.py  ray.py  rust_renderer.py  scene.py  sphere.py  vec3.py
src/rayt_rust/: _core.pyi
