[project]
name = "rayt"
version = "0.1.0"
description = "Ray Tracing with Python"
authors = [
  { name = "Gökmen Görgen", email = "gkmngrgn@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "matplotlib>=3.10.6",
    "numba>=0.57.0",
    "numpy>=2.2.6",
]

[project.optional-dependencies]
cuda = [
    "cupy>=13.0.0",
    "numba-cuda[cu13]>=0.19.1",
]

[project.scripts]
one-weekend = "rayt.cli:one_weekend"
test-gpu = "rayt.cli:test_gpu_availability"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "numba",
    "numba.*",
    "cupy",
    "cupy.*",
    "matplotlib.*",
]
ignore_missing_imports = true

# Ignore untyped decorators for CUDA/Numba JIT functions
[[tool.mypy.overrides]]
module = "rayt.cuda_optimized"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "rayt.gpu_utils"
disable_error_code = ["misc"]
