[project]
name = "rayt"
version = "0.1.0"
description = "Ray Tracing with Python"
authors = [
  { name = "Gökmen Görgen", email = "gkmngrgn@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "matplotlib>=3.10.6",
    "numba>=0.57.0",
    "numpy>=2.2.6",
]

[project.optional-dependencies]
cuda = [
    "numba-cuda[cu13]>=0.19.1",
]

[project.scripts]
one-weekend = "rayt.cli:one_weekend"
test-gpu = "rayt.cli:test_gpu_availability"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]
