[project]
name = "rayt"
version = "0.1.0"
description = "Ray Tracing in Python and Rust"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Gökmen Görgen", email = "gkmngrgn@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
    "numba>=0.62.0",
    "torch>=2.3.0",
]

[project.scripts]
one-weekend = "rayt.cli:one_weekend"
test-gpu = "rayt.cli:test_gpu_availability"

[tool.maturin]
module-name = "rayt_rust._core"
python-packages = ["rayt", "rayt_rust"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
cuda = [
    "numba-cuda[cu13]>=0.20.0",
]
