[tool.poetry]
name = "rayt-python"
version = "0.1.0"
description = "Ray tracing with Python"
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]
license = "MIT"
packages = [{include = "rayt_python"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
maturin = "^1.3.0"

[tool.poetry.scripts]
one-weekend = "rayt_python.main:one_weekend"

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"
